		Changed language prompts 372, 373, 387, 388, 389, 390 and 438.
		Added the turbodiesel macro language so that reports can be
		customized per language and reports. Thanks to Redy Rodriguez
		for finding this one and implement it into mbse bbs.
		Splitted the No TCP settings in No IBN, No IFC and No ITN.
		Removed settings for Non-hold mail and Pickup Primary.

	common.a:
		Added 2 functions to return the OS name and CPU family.
		Added a function to return the right tearline.
		Added support for ext3 filesystem in diskspace check.
		Fixed lharc archives return code to LHA.
		Changed mkprod.awk script to support Debian Woody.

	clcomm.a
		Added counter for mailer TCP/IP sessions.

	diesel.a
		New library for parsing macro templates.

	mbsetup:
		In message groups added default settings for auto area
		creation.
		Added servicename filemgr to the filemgr services.
		When adding or deleting a message area, several extra checks
		are done. The JAM base is also removed when deleting.
		Layout for message area editor changed, more logical now.
		If selecting a file/mailgroup in node edit that is outside the
		visible range of groups, the view is adjusted.
		If changing the path in an existing file area, the files in
		that area are moved to the new path.
		It is now possible to move file areas.
		It is now possible to move JAM message bases.
		Added edit of external message editor in menu 1.4.
		Added edit of NoPrompt setting in menus for doors.
		Changed edit of message editor in user editor.
		Double noderecords are automatic removed with error logging.
		Corrected screen layout in menu 1.4.11.
		When editing analogue modem lines, the locked portspeed was
		in a lot of cases set to 0.
		In newfiles and filefind reports sets default template files
		during init.
		When adding a new newfiles or filefind record some defaults
		are automatic filled in.
		Splitted no TCP into no IBN, no IFC and no ITN in global and
		nodes setup.