@@ -4604,6 +4604,8 @@ v0.33.20        10-Feb-2002
 		for finding this one and implement it into mbse bbs.
 		Splitted the No TCP settings in No IBN, No IFC and No ITN.
 		Removed settings for Non-hold mail and Pickup Primary.
+		Removed several setting for http setup, this is now handled
+		by the macro templates.
 
 	common.a:
 		Added 2 functions to return the OS name and CPU family.
@@ -4646,6 +4648,8 @@ v0.33.20        10-Feb-2002
 		nodes setup.
 		When editing a new message area, and the area was made active,
 		all entered data was erased.
+		Removed setting for http setup which are now in the macro
+		templates.
 
 	mbfido:
 		In AreaMgr and FileMgr changed aka matching for area 
